# tsqsim

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  ci-default  ci-default.sh
.github/workflows/: artifacts.yml  build.yml
cmake/: stock-includes.cmake  util-tsqsim.cmake  util.cmake
docs/: ICECC_INSTALL.md
src/: CMakeLists.txt
src/lib-base/: CMakeLists.txt
src/lib-base/src/: Abstracts.cpp  Abstracts.h  AbstractsIndep.cpp  AbstractsIndep.h  AlgoStdDevCross.cpp  AlgoStdDevCross.h  Assertions.h  AssertionsExc.h  Buffer.cpp  Buffer.h  BufferBool.cpp  BufferBool.h  BufferCandles.cpp  BufferCandles.h  BufferDouble.cpp  BufferDouble.h  BufferTpl.cpp  BufferTpl.h  BufferType.cpp  BufferType.h  BufferTypeBool.h  BufferUpdateable.cpp  BufferUpdateable.h  BufferVecType.cpp  BufferVecType.h  BufferVecUpdateable.cpp  BufferVecUpdateable.h  CLI.cpp  CLI.h  CLIResult.h  CacheDynamic.h  CacheDynamicNonTpl.cpp  CacheDynamicNonTpl.h  CacheRAMStock.cpp  CacheRAMStock.h  Candle.cpp  Candle.h  CandleAggr.cpp  CandleAggr.h  CandleCalc.cpp  (+449 more)
src/lib-base/src/r/: PredictorRBaseline.cpp  PredictorRCustom.cpp
src/qt-lib/: CMakeLists.txt
src/qt-lib/src/: EventHandlerKey.cpp  EventHandlerKey.h  EventHandlerMouse.cpp  EventHandlerMouse.h  Fractal.cpp  Fractal.h  FrameIter.cpp  FrameIter.h  Geom.cpp  Geom.h  LabelQT.cpp  LabelQT.h  LabelQTSignal.cpp  LabelQTSignal.h  Monster.cpp  Monster.h  MyMainWindow.cpp  MyMainWindow.h  MyMainWindow2.cpp  MyMainWindow3.cpp  PlotDataBase.cpp  PlotDataBase.h  PlotDataScreenshot.cpp  PlotDataScreenshot.h  PlotElements.cpp  PlotElements.h  ScreenshotsScaleUp.cpp  ScreenshotsScaleUp.h  TxtSimulatorBase.cpp  TxtSimulatorBase.h  TxtSmallBase.cpp  TxtSmallBase.h  Util.cpp  Util.h  UtilBare.cpp  UtilBare.h  baustelle.cpp  global.h  mainwindow.cpp  mainwindow.h  (+4 more)
src/tsqsim/: CMakeLists.txt  data
src/tsqsim-lib/: CMakeLists.txt
src/tsqsim-lib/src/: CLITsq.cpp  CLITsq.h  Distribs.cpp  Distribs.h  ISimulatorTS.cpp  ISimulatorTS.h  ITSXform.cpp  ITSXform.h  OptiSubjectPred.cpp  OptiSubjectPred.h  OptimizerFactoryPred.cpp  OptimizerFactoryPred.h  OptimizerPred.cpp  OptimizerPred.h  OptimizerTS.cpp  OptimizerTS.h  SimulatorFactoryTSImpl.cpp  SimulatorFactoryTSImpl.h  SimulatorTS.cpp  SimulatorTS.h  SimulatorTSFactory.cpp  SimulatorTSFactory.h  SimulatorTSFactoryImpl.cpp  SimulatorTSFactoryImpl.h  SimulatorTSMT.cpp  SimulatorTSMT.h  SimulatorTSReports.cpp  SimulatorTSReports.h  TSFunFactory.cpp  TSFunFactory.h  TSFunLua.cpp  TSFunLua.h  TSFunPrintAll.cpp  TSFunPrintAll.h  TSFunPrintCumul.cpp  TSFunPrintCumul.h  TSFunTxt.cpp  TSFunTxt.h  TSFunType.cpp  TSFunType.h  (+18 more)
src/tsqsim-lib/static/scripts/: data-generation.txt  plot_acf_pacf.py  plot_line.py  py_cuml.py  py_darts.py  py_static.py  py_statsmodels.py  r-baseline.R  r-path.R  ts-xform-script.lua  ts-xform-script.txt
src/tsqsim-qt/: CMakeLists.txt
src/tsqsim-qt/src/: main.cpp
src/tsqsim/scripts/: ts-xform-script.txt
src/tsqsim/src/: App.cpp  App.h  main.cpp
src/wxConfQT/: CMakeLists.txt
src/wxConfQT/src/: DialogML.cpp  DialogML.h  DialogMLImpl.cpp  DialogOpti.cpp  DialogOpti.h  DialogOptiImpl.cpp  DialogPlots.cpp  DialogPlots.h  DialogPlotsImpl.cpp  DialogTF.cpp  DialogTF.h  DialogTFImpl.cpp  DialogTS.cpp  DialogTS.h  DialogTSImpl.cpp  EnumStringMapBufferType.cpp  EnumStringMapBufferType.h  EnumStringMapBufferVecType.cpp  EnumStringMapBufferVecType.h  EnumStringMapDataSrc.cpp  EnumStringMapDataSrc.h  EnumStringMapDistType.cpp  EnumStringMapDistType.hpp  EnumStringMapPlotType.cpp  EnumStringMapPlotType.h  EnumStringMapRDEType.cpp  EnumStringMapRDEType.hpp  EnumStringMapRFEType.cpp  EnumStringMapRFEType.hpp  EnumStringMapSimulType.cpp  EnumStringMapSimulType.h  SignalStrParsing.cpp  wxConfQTApp.cpp  wxConfQTApp.h  wxConfQTMain.cpp  wxConfQTMain.h  wxConfQTMainImpl.cpp  wxUtil.cpp  wxUtil.h  wx_pch.h
src/wxConfQT/wxsmith/: DialogML.wxs  DialogOpti.wxs  DialogPlots.wxs  DialogTF.wxs  DialogTS.wxs  wxConfQTframe.wxs
tests/: CMakeLists.txt
tests/qt-test/: CMakeLists.txt
tests/qt-test/src/: DateTimeTest.h  MonsterTest.cpp  UtilTest.cpp
tests/test-base/: CMakeLists.txt
tests/test-base/src/: BufferTest.cpp  CandleAggrTest.cpp  CandleCalcTest.cpp  CandleScalerTest.cpp  ConfigTest.cpp  CrossValidCalcTest.cpp  DateTimeTest.cpp  InterestManTest.cpp  KMeans1dTest.cpp  MaxMinFindAllTest.cpp  OptiVarTest.cpp  OrderedSeriesTest.cpp  PredictorTest.cpp  StrategyFactoryNameTest.cpp  TicksFormatGuesserTest.cpp  TicksProviderTest.cpp  TradeUtilTest.cpp  main.cpp
tests/test-common/: CMakeLists.txt
tests/test-common/src/: pch_test.h  test.cpp
tests/test-tsqsim/: CMakeLists.txt
tests/test-tsqsim/src/: TSXformImplTest.cpp  main.cpp
util/: build.py  ci-clang.sh  ci-gcc.sh  ci-mingw.sh  deps-build.sh  deps-optional-pull.sh  deps-pull.sh  prep-env.sh  prep-raw.sh  run-demo.sh
